[tool.poetry]
name = "roke"
version = "0.1.1"
description = "A library to name and identify things"
authors = ["Roberto Alsina <roberto.alsina@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ralsina/roke"
packages = [{ include = "roke" }]

[tool.poetry.dependencies]
python = ">=3.6"
click = "^7"

[tool.poetry.dev-dependencies]
pytest = "^5.3"
flake8 = "^3.7.9"
black = "^19.10b0"
mypy = "^0.761"
flake8-import-order = "^0.18.1"

[tool.poetry.scripts]
roke = 'roke:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
target-version = ['py36']
